--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,35 +1,33 @@
 # The primary author of this blog.
 # Must be the same as `author` in `_config.yml`.
 # Change `author1` to your shortname.
-author1:
-  name:              <firstname> <lastname>
-  email:             <mail@domain.tld>
+author:
+  name:              CONNECTS
+  email:             contact@connects.so
 
   # Used at the bottom of each page and at the top of the `about` layout
   # Markdown enabled, can use multiple paragraphs (enabled by `|`)
   about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
+    AI 기반 구조 생물학 분석 플랫폼 **SCV.BIO**는
+    단백질-리간드 예측, 시뮬레이션, 도킹, 분자 디자인, 독성 평가 등의 분석을
+    웹 기반 환경에서 누구나 손쉽게 수행할 수 있도록 지원합니다.
 
   # This photo will be used in the about section
   picture:
-    path:            https://placehold.it/128x128
+    path:            /assets/img/favicon.ico
     # srcset is optional, but can be used to provide higher res versions for retina displays
     srcset:
-      1x:            https://placehold.it/128x128
-      2x:            https://placehold.it/256x256
+      1x:            /assets/img/favicon.ico
+      2x:            /assets/img/favicon.ico
 
   # Social media icons in sidebar
   # Comment/uncommet to show/hide
   # Rearrange to change the order in which they appear
   social:
-    twitter:         <username>
-    github:          <username>
-    # email:           mailto:<mail@domain.tld>
-    # rss:             https://<url>/feed.xml
+#    twitter:
+     github:          CONNECTS-SCV
+     email:           mailto:contact@connects.so
+#     rss:             https://scv.bio
     # facebook:        <username>
     # google:          <number>
     # vk:              <username>
@@ -64,21 +62,3 @@ author1:
     # stumbleupon:     <username>
     # paypal:          <username>
     # download:        https://github.com/qwtel/hydejack-starter-kit/archive/v7.5.0.zip
-
-# Another author (optional)
-author2:
-  name:              <firtname> <lastname>
-  email:             <mail@domain.tld>
-  about:             |
-    Lorem ipsum dolor sit amet, consectetur adipiscing elit,
-    sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-    Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
-
-    Open `_data/authors.yml` to edit this text.
-  picture:           https://placehold.it/128x128
-  twitter:           <username>
-  github:            <username>
-  accent_color:      '#268bd2'
-  accent_image:
-    background:      '#202020'
-    overlay:         false
