--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "tosstech",
+  "name": "connects",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,10 +10,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "@next/third-parties": "^15.5.4",
     "@radix-ui/react-slot": "^1.2.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.544.0",
+    "next": "^15.5.4",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-markdown": "^10.1.0",
