--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -23,7 +23,6 @@ jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
-    environment: github-pages
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -55,7 +54,7 @@ jobs:
 
       - name: Build with Next.js
         env:
-          NEXT_PUBLIC_GA_ID: ${{ vars.NEXT_PUBLIC_GA_ID }}
+          NEXT_PUBLIC_GA_ID: ${{ secrets.NEXT_PUBLIC_GA_ID }}
         run: npm run build
 
       - name: Upload artifact
