--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -59,6 +59,10 @@ jobs:
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
           NEXT_PUBLIC_ADMIN_PASSWORD: ${{ secrets.NEXT_PUBLIC_ADMIN_PASSWORD }}
           NEXT_PUBLIC_SUPABASE_SERVICE_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_SERVICE_KEY }}
+          NEXT_PUBLIC_NCP_ACCESS_KEY: ${{ secrets.NEXT_PUBLIC_NCP_ACCESS_KEY }}
+          NEXT_PUBLIC_NCP_SECRET_KEY: ${{ secrets.NEXT_PUBLIC_NCP_SECRET_KEY }}
+          NEXT_PUBLIC_NCP_MAIL_API_URL: ${{ secrets.NEXT_PUBLIC_NCP_MAIL_API_URL }}
+          NEXT_PUBLIC_NCLOUD_SENDER_EMAIL: ${{ secrets.NEXT_PUBLIC_NCLOUD_SENDER_EMAIL }}
         run: npm run build
 
       - name: Upload artifact
