--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@next/third-parties": "^15.5.4",
     "@radix-ui/react-slot": "^1.2.3",
     "@supabase/supabase-js": "^2.58.0",
+    "@types/crypto-js": "^4.2.2",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vercel/kv": "^3.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "crypto-js": "^4.2.0",
     "fuse.js": "^7.1.0",
     "lucide-react": "^0.544.0",
     "next": "^15.5.4",
